--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/css/output.css">
-    <link rel="shortcut icon" href="/public/img/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/img/logo.ico" type="image/x-icon">
 
     <title>Job Notifiy</title>
 </head>
@@ -18,16 +18,16 @@
     </div>
     <div
             class="grid grid-cols-7 py-2 md:py-0 divide-x divide-yellow-500 bg-black text-center text-sm md:text-base  md:font-bold text-yellow-500  mx-auto sticky top-0  ">
-            <div class=" md:p-2 hover:bg-yellow-500 hover:text-black "><a class=" text-white" href="/public/index.html"> HOME</a> </div>
-            <div class=" md:p-2 hover:bg-yellow-500 hover:text-black   "> <a  href="/public/latestjob.html">
+            <div class=" md:p-2 hover:bg-yellow-500 hover:text-black "><a class=" text-white" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/index.html"> HOME</a> </div>
+            <div class=" md:p-2 hover:bg-yellow-500 hover:text-black   "> <a  href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/latestjob.html">
                     LATEST JOB</a> </div>
-            <div class=" md:p-2 hover:bg-yellow-500 hover:text-black "> <a href="/public/admitcard.html">ADMIT CARD</a>
+            <div class=" md:p-2 hover:bg-yellow-500 hover:text-black "> <a href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/admitcard.html">ADMIT CARD</a>
             </div>
-            <div class=" md:p-2 hover:bg-yellow-500 hover:text-black "><a   href="/public/result.html"> RESULT </a></div>
-            <div class=" md:p-2 hover:bg-yellow-500 hover:text-black "> <a href="/public/answerkey.html">ANSWER KEY </a></div>
-            <div class=" md:p-2 hover:bg-yellow-500 hover:text-black "> <a href="/public/syallbus.html"> SYALLBUS</a> </div>
+            <div class=" md:p-2 hover:bg-yellow-500 hover:text-black "><a   href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/result.html"> RESULT </a></div>
+            <div class=" md:p-2 hover:bg-yellow-500 hover:text-black "> <a href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/answerkey.html">ANSWER KEY </a></div>
+            <div class=" md:p-2 hover:bg-yellow-500 hover:text-black "> <a href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/syallbus.html"> SYALLBUS</a> </div>
            
-            <div class=" md:p-2 hover:bg-yellow-500 hover:text-black "> <a href="/public/contectus.html"> CONTECT US</a> </div>
+            <div class=" md:p-2 hover:bg-yellow-500 hover:text-black "> <a href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/contectus.html"> CONTECT US</a> </div>
 
         </div>
 
@@ -39,20 +39,20 @@
     <div class="slidelink text-center  overflow-hidden  text-blue-900 font-extrabold py-6   w-[80vw] mx-auto">
         <marquee behavior="alternate" onMouseOver="this.stop()" onMouseOut="this.start()" class="hover:cursor-pointer" direction="left-0"> SSC MTS Online Form 2022 || Bihar
             2Yr BEd Online Form 2022 || Patna HC PA Online Form 2022 </marquee>
-        <marquee behavior="alternate" onMouseOver="this.stop()" onMouseOut="this.start()" class="hover:cursor-pointer"  direction="left-20">  <a class="  hover:underline" href="/public/admitcard.html" target="_blank">Rajasthan police admitcard 2022</a> || RPSC TGT Online Form 2022 || BPSC
+        <marquee behavior="alternate" onMouseOver="this.stop()" onMouseOut="this.start()" class="hover:cursor-pointer"  direction="left-20">  <a class="  hover:underline" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/admitcard.html" target="_blank">Rajasthan police admitcard 2022</a> || RPSC TGT Online Form 2022 || BPSC
             67th Pre Admit Card 2022 || BSF Group B Post Online Form 2022 </marquee>
     </div>
 
     <div class="grid grid-cols-6 gap-2 text-center text-white w-[80vw] xl:w-[70vw] mx-auto mt-14 ">
-        <div class="bg-blue-700 rounded-md p-2  "><a href="/public/pages/rajasthan_police_2022.html"> Raj.police </a> </div>
-        <div class="bg-red-700 rounded-md p-2 "><a href="/public/pages/footer.html"> RRB</a> </div>
+        <div class="bg-blue-700 rounded-md p-2  "><a href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/pages/rajasthan_police_2022.html"> Raj.police </a> </div>
+        <div class="bg-red-700 rounded-md p-2 "><a href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/pages/footer.html"> RRB</a> </div>
         <div class="bg-green-700 rounded-md p-2 "> <a href="">SSC</a> </div>
         <div class="bg-yellow-700 rounded-md p-2 "> <a href="">UPSC</a> </div>
         <div class="bg-gray-700 rounded-md p-2 "> <a href="">PCS</a> </div>
 
         <div class="bg-sky-700 rounded-md p-2 "> <a href=""></a> CTET </div>
 
-        <div class="bg-sky-700 rounded-md p-2 "> <a href="/public/pages/rajasthan_police_2022.html"> RAJ.POLICE </a> </div>
+        <div class="bg-sky-700 rounded-md p-2 "> <a href="/publichttps://github.com/JITUKHATI02/jobnotifiy.github.io.git/pages/rajasthan_police_2022.html"> RAJ.POLICE </a> </div>
         <div class="bg-yellow-700 rounded-md p-2 "> <a href="">UPSC </a></div>
         <div class="bg-blue-700 rounded-md p-2 "> <a href="">REET</a> </div> 
         <div class="bg-red-700 rounded-md p-2 "> <a href="">RRB</a> </div>
@@ -80,15 +80,15 @@
 
 
 
-                <li class=" left-0 "> <a class="text-blue-800  hover:underline mt-4" href="/public/latestjob.html"> RPSC School Lecturer Online Form 2022 </a></li>
-                <li class=" left-0 "> <a class="text-blue-800  hover:underline mt-4" href="/public/latestjob.html"> IGI Aviation Customer Service Agent Online Form 2022 </a></li>
-                <li class=" left-0 "> <a class="text-blue-800  hover:underline mt-4" href="/public/latestjob.html"> Bank of India Various Post Online Form 2022 </a></li>
-                <li class=" left-0 "> <a class="text-blue-800  hover:underline mt-4" href="/public/latestjob.html"> BSF Group B SI Work, JE Electrical Online Form 2022 </a></li>
-                <li class=" left-0 "> <a class="text-blue-800  hover:underline mt-4" href="/public/latestjob.html"> </a></li>
+                <li class=" left-0 "> <a class="text-blue-800  hover:underline mt-4" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/latestjob.html"> RPSC School Lecturer Online Form 2022 </a></li>
+                <li class=" left-0 "> <a class="text-blue-800  hover:underline mt-4" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/latestjob.html"> IGI Aviation Customer Service Agent Online Form 2022 </a></li>
+                <li class=" left-0 "> <a class="text-blue-800  hover:underline mt-4" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/latestjob.html"> Bank of India Various Post Online Form 2022 </a></li>
+                <li class=" left-0 "> <a class="text-blue-800  hover:underline mt-4" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/latestjob.html"> BSF Group B SI Work, JE Electrical Online Form 2022 </a></li>
+                <li class=" left-0 "> <a class="text-blue-800  hover:underline mt-4" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/latestjob.html"> </a></li>
 
             </div>
             <div class="latest  p-2 mr-9 text-right "><a
-                    class=" cursor-pointer text-blue-700 font-extrabold  hover:underline " href="/public/latestjob.html">View More...</a> </div>
+                    class=" cursor-pointer text-blue-700 font-extrabold  hover:underline " href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/latestjob.html">View More...</a> </div>
         </div>
 
         <!--  Admit card //////////////////////////////////////////////////////////===============================------>
@@ -101,17 +101,17 @@
 
 
 
-                <li> <a class="text-blue-800  hover:underline" href="/public/admitcard.html " target="_blank">Rajasthan police admitcard 2022</a></li>
-                <li> <a class="text-blue-800  hover:underline" href="/public/admitcard.html "> ASRB AO, F&AO Admit Card 2022</a></li>
-                <li> <a class="text-blue-800  hover:underline" href="/public/admitcard.html "> SSC MTS 2020 Paper II Admit Card </a></li>
-                <li> <a class="text-blue-800  hover:underline" href="/public/admitcard.html "> RBI Assistant Mains Admit Card 2022 </a></li>
-                <li> <a class="text-blue-800  hover:underline" href="/public/admitcard.html "> MP High Court Civil Judge Pre Admit Card 2022
+                <li> <a class="text-blue-800  hover:underline" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/admitcard.html " target="_blank">Rajasthan police admitcard 2022</a></li>
+                <li> <a class="text-blue-800  hover:underline" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/admitcard.html "> ASRB AO, F&AO Admit Card 2022</a></li>
+                <li> <a class="text-blue-800  hover:underline" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/admitcard.html "> SSC MTS 2020 Paper II Admit Card </a></li>
+                <li> <a class="text-blue-800  hover:underline" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/admitcard.html "> RBI Assistant Mains Admit Card 2022 </a></li>
+                <li> <a class="text-blue-800  hover:underline" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/admitcard.html "> MP High Court Civil Judge Pre Admit Card 2022
                     </a></li>
                 <li> <a class="text-blue-800  hover:underline" href="#"> </a></li>
 
             </div>
             <div class="latest  p-2 mr-9 text-right"><a
-                    class=" cursor-pointer text-blue-700 font-extrabold  hover:underline " href="/public/admitcard.html">View More...</a> </div>
+                    class=" cursor-pointer text-blue-700 font-extrabold  hover:underline " href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/admitcard.html">View More...</a> </div>
         </div>
 
 
@@ -126,19 +126,19 @@
 
 
 
-                <li> <a class="text-blue-800 px-4 hover:underline my-2" href="/public/answerkey.html"> RSMSSB APRO Answer Key 2022 </a> </li>
-                <li> <a class="text-blue-800 px-4 hover:underline my-2" href="/public/answerkey.html"> Delhi High Court Judicial Services Pre
+                <li> <a class="text-blue-800 px-4 hover:underline my-2" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/answerkey.html"> RSMSSB APRO Answer Key 2022 </a> </li>
+                <li> <a class="text-blue-800 px-4 hover:underline my-2" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/answerkey.html"> Delhi High Court Judicial Services Pre
                         Answer Key 2022 </a> </li>
-                <li> <a class="text-blue-800 px-4 hover:underline my-2" href="/public/answerkey.html"> UPPSC Assistant Professor 2020 Answer
+                <li> <a class="text-blue-800 px-4 hover:underline my-2" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/answerkey.html"> UPPSC Assistant Professor 2020 Answer
                         Key </a> </li>
-                <li> <a class="text-blue-800 px-4 hover:underline my-2" href="/public/answerkey.html"> UPSSSC Junior Engineer 2018 Answer Key
+                <li> <a class="text-blue-800 px-4 hover:underline my-2" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/answerkey.html"> UPSSSC Junior Engineer 2018 Answer Key
                     </a> </li>
 
 
 
             </div>
             <div class="viewmore  p-2 mr-9 text-right"><a
-                    class=" cursor-pointer text-blue-700 font-extrabold  hover:underline " href="/public/answerkey.html">View More...</a> </div>
+                    class=" cursor-pointer text-blue-700 font-extrabold  hover:underline " href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/answerkey.html">View More...</a> </div>
         </div>
 
 
@@ -151,17 +151,17 @@
             <div class="p-2">
 
 
-                <li class=" "> <a class="text-blue-800  hover:underline mt-4" href="/public/result.html"> UP Police SI Confidential, ASI
+                <li class=" "> <a class="text-blue-800  hover:underline mt-4" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/result.html"> UP Police SI Confidential, ASI
                         Account Additional Result 2022 </a></li>
-                <li class=" "> <a class="text-blue-800  hover:underline mt-4" href="/public/result.html"> UPPSC Programmer Grade II Result
+                <li class=" "> <a class="text-blue-800  hover:underline mt-4" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/result.html"> UPPSC Programmer Grade II Result
                         2022 </a></li>
-                <li class=" "> <a class="text-blue-800  hover:underline mt-4" href="/public/result.html"> UPPSC Technical Education
+                <li class=" "> <a class="text-blue-800  hover:underline mt-4" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/result.html"> UPPSC Technical Education
                         Teaching Service Result 2022 </a></li>
-                <li class=" "> <a class="text-blue-800  hover:underline mt-4" href="/public/result.html"> </a></li>
+                <li class=" "> <a class="text-blue-800  hover:underline mt-4" href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/result.html"> </a></li>
 
             </div>
             <div class="latest  p-2 mr-9 text-right"><a
-                    class=" cursor-pointer text-blue-700 font-extrabold  hover:underline " href="/public/result.html">View More...</a> </div>
+                    class=" cursor-pointer text-blue-700 font-extrabold  hover:underline " href="https://github.com/JITUKHATI02/jobnotifiy.github.io.git/public/result.html">View More...</a> </div>
         </div>
     </div>
 
